<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_no"
        android:id="@+id/text"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginBottom="20dp"
        android:hint="@string/phone_no"
        android:inputType="phone" />

    <Button
        android:id="@+id/generateotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginBottom="20dp"
        android:text="@string/generate_otp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generateotp"
        android:layout_marginBottom="20dp"
        android:hint="@string/otp"
        android:inputType="number" />

    <Button
        android:id="@+id/verifyotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp"
        android:text="@string/verify"
        android:textSize="20dp" />

        </RelativeLayout>